# lab2307_WS1314_aras

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/bonn/: labels.txt
include/: classifier_svm.h  constants.h  data_io.h  data_io_backend.h  keyframe.h  mesher.h  opflow.h  opflow_tensor.h  segmentation.h  timer.h
include/bonn/: backend.h
include/cornell/: backend.h
include/ethz/: backend.h
include/stanford/: backend.h
libsvm-3.17/: CMakeLists.txt
src/: classifier_svm.cpp  data_io.cpp  data_io_backend.cpp  keyframe.cpp  main.cpp  mesher.cpp  opflow.cpp  opflow_tensor.cpp  segmentation.cpp  timer.cpp
src/bonn/: backend.cpp
src/cornell/: backend.cpp  readData.cpp
src/ethz/: backend.cpp
src/stanford/: backend.cpp  read_data_eval.cpp
src/tools/: extract_keypoints.cpp
src/viewer/: CMatrix.h  CRender.cpp  CRender.h  CTMesh.cpp  CTMesh.h  CTensor.h  CVector.h  Makefile  NMath.cpp  NMath.h  NRBM.cpp  NRBM.h  NShow.cpp  NShow.h  Project  Project.cpp  Project.cpp~  README.txt  SequenceParameters_GroundTruth.mat  Transform.cpp  Transform.h  calib_RGB.txt  clustering.mat  config_example.txt  fbo.cpp  fbo.h  runshell.sh  tempconfig.txt
tests/: dataset_tests.cpp  mesh_tests.cpp
tools/: plots.py  split_data.py  svm_data_viewer.py
tracking/: CFilter.h
tracking-gpu/: CTensor.h
